// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responses should translate to multiple responses 1`] = `
Array [
  Object {
    "code": "r1",
    "contents": Array [
      Object {
        "examples": Array [
          Object {
            "key": "application/json",
            "value": Object {},
          },
        ],
        "mediaType": "application/json",
        "schema": Object {},
      },
    ],
    "description": "d1",
    "headers": Array [
      Object {
        "name": "fake-header",
        "style": "simple",
      },
    ],
  },
  Object {
    "code": "r2",
    "contents": Array [
      Object {
        "examples": Array [
          Object {
            "key": "application/xml",
            "value": Object {},
          },
        ],
        "mediaType": "application/xml",
        "schema": Object {},
      },
    ],
    "description": "d2",
    "headers": Array [
      Object {
        "name": "fake-header",
        "style": "simple",
      },
    ],
  },
]
`;

exports[`responses should translate to response w/o examples 1`] = `
Array [
  Object {
    "code": "r1",
    "contents": Array [
      Object {
        "examples": Array [],
        "mediaType": "",
        "schema": Object {},
      },
    ],
    "description": "d1",
    "headers": Array [
      Object {
        "name": "fake-header",
        "style": "simple",
      },
    ],
  },
]
`;

exports[`responses should translate to response w/o headers 1`] = `
Array [
  Object {
    "code": "r1",
    "contents": Array [
      Object {
        "examples": Array [
          Object {
            "key": "application/xml",
            "value": Object {},
          },
        ],
        "mediaType": "application/xml",
        "schema": Object {},
      },
    ],
    "description": "d1",
    "headers": Array [
      Object {
        "name": "fake-header",
        "style": "simple",
      },
    ],
  },
]
`;
